# trakt

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README-cratesio.md  README.md  config.example.toml
pkg/: trakt.service
src/: config.rs  health.rs  load_balancer.rs  main.rs  motd.rs  proxy.rs  scheduler.rs  snapshot.rs
src/raknet/: datatypes.rs  frame.rs  mod.rs  ping.rs
src/raknet/message/: mod.rs  offline.rs  online.rs
trakt_api/: Cargo.toml
trakt_api/src/: constraint.rs  lib.rs  model.rs  provider.rs
trakt_core/: Cargo.toml
trakt_core/src/: api.rs  backend.rs  config.rs  health.rs  lib.rs  load_balancer.rs  proxy.rs  scheduler.rs  snapshot.rs
trakt_core/src/bedrock/: client.rs  mod.rs  motd.rs  proxy.rs  snapshot.rs  spy.rs
trakt_dashboard/: Cargo.toml  README.md
trakt_dashboard/src/: lib.rs  status.rs
trakt_dashboard/templates/: index.html  status.html
trakt_dashboard/templates/status/: _inner.html  _server_entry.html  index.html
trakt_http_api/: Cargo.toml  description.md
trakt_http_api/src/: lib.rs  path.rs  resources.rs
trakt_raknet/: Cargo.toml
trakt_raknet/src/: bedrock.rs  datatypes.rs  lib.rs
trakt_raknet/src/message/: offline.rs  online.rs
trakt_webapi/: Cargo.toml
trakt_webapi/src/: lib.rs  resources.rs
