[package]
name = "trakt"
description = "Load balancer for Minecraft Bedrock Edition"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.2"

serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"

fdlimit = "0.2.1"
anyhow = "1.0"
bytes = "1.4"
rand = "0.8"
tokio = { version = "1.32", features = ["full"] }
ppp = "2.2"

[[bin]]
path = "src/main.rs"
name = "trakt"
