[package]
name = "trakt_api"
description = "API to control trakt proxies"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4.20"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

[dependencies.async-trait]
git = "https://github.com/Unoqwy/async-trait"
rev = "4ac94682269f366ee3c8bb83332616a656b77d5c"
