[package]
name = "trakt_core"
description = "Reverse proxy and load balancer library for Minecraft: Bedrock Edition"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4.20"
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bytes = "1.4"
rand = "0.8"
ppp = "2.2"

[dependencies.raknet]
path = "../trakt_raknet"
package = "trakt_raknet"

[dependencies.async-trait]
git = "https://github.com/Unoqwy/async-trait"
rev = "4ac94682269f366ee3c8bb83332616a656b77d5c"
