[package]
name = "trakt_dashboard"
description = "Web dashboard for Trakt (Minecraft reverse proxy and load balancer)"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
trakt_api = { path = "../trakt_api" }
trakt_http_api = { path = "../trakt_http_api" }

log = "0.4.20"
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }

axum = "0.6.20"
axum-htmx = "0.3.1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
tower-livereload = "0.8.1"

uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.async-trait]
git = "https://github.com/Unoqwy/async-trait"
rev = "4ac94682269f366ee3c8bb83332616a656b77d5c"

